caching improvements